<resources>
	<string name="app_name">yaxim</string>
	<string name="app_name_bruno">Bruno</string>
	<string name="conn_title">yaxim: %s</string>
	<string name="conn_title_bruno">Bruno: %s</string>
	<string name="conn_connecting">Connecting to server…</string>
	<string name="conn_disconnecting">Disconnecting…</string>
	<string name="conn_online">Online</string>
	<string name="conn_offline">Offline</string>
	<string name="conn_empty_roster">No contacts to show!</string>
	<string name="conn_empty_roster_hints">There are many ways to add contacts:\n\n
		- Android Beam™: touch a friend\'s phone\n\n
		- Scan a QR code\n\n
		- \"Create invitation\" and share it (e-mail, SMS, QR code, …)\n\n
		- \"Add contact\" if you know the JID</string>
	<string name="conn_reconnect">Next connection attempt in %d seconds.</string>
	<string name="conn_disconnected">Connection closed</string>
	<string name="conn_no_network">No network connection</string>
	<string name="conn_ping_timeout">No response</string>
	<string name="conn_error">Error: %s</string>
	<string name="Global_Exit">Exit</string>
	<string name="Global_authenticate_first">Please connect first</string>
	<string name="Global_JID_hint">user@yax.im</string>
	<string name="Global_JID_malformed">Check address format!</string>
	<string name="StartupDialog_Title">Welcome to yaxim!</string>
	<string name="StartupDialog_Summary">You need to configure yaxim before you can use it. Please enter your Jabber ID and password.</string>
	<string name="StartupDialog_pwHint">Enter password</string>
	<string name="StartupDialog_pwshowHint">Show password</string>
	<string name="StartupDialog_Username_title">Jabber ID:</string>
	<string name="StartupDialog_passwd_title">Password:</string>
	<string name="StartupDialog_advanced">Advanced…</string>
	<string name="StartupDialog_create_new">Register new account</string>
	<string name="StartupDialog_error_password">Password is too short!</string>
	<string name="StartupDialog_created_password">Created secure password</string>
	<string name="StartupDialog_auth_failed">Please check your username and password!</string>
	<string name="StartupDialog_server_failed">Could not connect to %s!</string>
	<string name="StartupDialog_no_registration">Server does not allow registration!</string>
	<string name="StartupDialog_invitation">You have been invited to Jabber. Please complete your registration.</string>
	<string name="StartupDialog_no_more_accounts">No additional account supported!</string>
	<string name="notification_message">Message from %s</string>
	<string name="notification_anonymous_message">Message received</string>
	<string name="notification_muc_message">%1$s in %2$s</string>
	<string name="notification_reply">Reply</string>
	<string name="notification_mark_read">Mark Read</string>
	<string name="notification_error">Error while sending message!</string>
	<string name="preftitle_notify">Notification Settings</string>
	<string name="preftitle_notify_msg">Message Notification</string>
	<string name="preftitle_notify_muc">Group Chat Notification</string>
	<string name="notification_custom">Custom Ringtone</string>
	<string name="muc_highlight_title">Only notify on mention</string>
	<string name="muc_highlight_sum">Notify when your nickname is mentioned in a room</string>
	<string name="led_title">Blinking LED</string>
	<string name="led_summ">Blink phone LED on incoming messages</string>
	<string name="vibr_title">Vibration</string>
	<string name="vibr_summ">Vibrate on incoming messages</string>
	<string-array name="vibr_values_displayed">
		<item>Never</item>
		<item>System preference</item>
		<item>Always</item>
	</string-array>
	<string name="ringtone_title">Ringtone</string>
	<string name="ringtone_summ">Tone for incoming messages</string>
	<string name="ticker_title">Message preview</string>
	<string name="ticker_summ">Show sender and message in status bar</string>
	<string name="preftitle_general">General Settings</string>
	<string name="pref_dnd_when_silent">\"Do not disturb\" in silent mode</string>
	<string name="pref_dnd_when_silent_summ">Set your online status to \"DND\" when your phone is in silent mode</string>
	<string name="statuspopup_name">Set your status</string>
	<string name="showOffline_summ">Always show all contacts in the roster</string>
	<string name="showOffline_title">Show offline contacts</string>
	<string name="enableGroups_summ">Arrange your contacts by their groups</string>
	<string name="enableGroups_title">Show contact groups</string>
	<string name="foregroundService_summ">Keep app in memory to ensure always-on connection (foreground service)</string>
	<string name="foregroundService_title">Statusbar icon</string>
	<string name="preftitle_debug">Debugging</string>
	<string name="smackdebug_summ">Packet and debug output via logcat (may contain personal information)</string>
	<string name="smackdebug_title">SMACK debugging</string>
	<string name="reportcrash_title">Send crash reports</string>
	<string name="reportcrash_summ">Send anonymous crash reports to developer</string>
	<string name="preftitle_app">Appearance</string>
	<string name="FontChat_title">Chat font size</string>
	<string name="FontChat_summ">Set chat font size</string>
	<string name="FontChat_dialog">Chat font size</string>
	<string name="pref_theme">Theme</string>
	<string name="pref_theme_dark">Dark</string>
	<string name="pref_theme_light">Light</string>
	<string name="pref_theme_pine">Pine</string>
	<string name="pref_theme_ice">Ice</string>
	<string name="preftitle_ui">Appearance</string>
	<string-array name="fontSizesChat">
		<item>small</item>
		<item>normal</item>
		<item>large</item>
		<item>huge</item>
	</string-array>
	<string name="Menu_addFriend">Add contact</string>
	<string name="Menu_addClipboard">Add %s</string>
	<string name="Menu_ShowOff">Show offline</string>
	<string name="Menu_HideOff">Hide offline</string>
	<string name="Menu_AccSettings">Edit account</string>
	<string name="Menu_Settings">Settings</string>
	<string name="Menu_Status">Status</string>
	<string name="Menu_connect">Connect</string>
	<string name="Menu_disconnect">Disconnect</string>
	<string name="Menu_about">About yaxim</string>
	<string name="Menu_about_bruno">About Bruno</string>
	<string name="Menu_muc">Add / browse…</string>
	<string name="Menu_matrix">Enter the Matrix…</string>
	<string name="Menu_mark_all_as_read">Mark all as read</string>
	<string name="Menu_send_invitation">Create invitation</string>
    <string name="Menu_userlist">Participants</string>
	<string name="addFriend_Title">Add a Contact</string>
	<string name="addFriend_Summ">Please enter the Jabber ID of your friend, the
		desired screen name and choose their contact group!</string>
	<string name="addFriend_aliasHint">Screen name</string>
	<string name="addrosteritemaddgroupchoice">Add to a new group</string>
	<string name="NewGroup_EditTextField_Hint">Name for the new group</string>
	<string name="roster_contextmenu_group_rename">Rename group</string>
	<string name="roster_contextmenu_contact_mark_as_read">Mark as read</string>
	<string name="roster_contextmenu_contact_delete">Delete contact</string>
	<string name="roster_contextmenu_contact_delmsg">Delete chat history</string>
	<string name="roster_contextmenu_contact_rename">Rename</string>
	<string name="roster_contextmenu_contact_request_auth">Request authorization</string>
	<string name="roster_contextmenu_contact_change_group">Change group</string>
	<string name="roster_contextmenu_contact_share">Share address</string>
	<string name="roster_contextmenu_contact_ringtone">Ringtone</string>
	<string name="roster_contextmenu_muc_edit">Edit group chat</string>
	<string name="roster_contextmenu_muc_leave">Leave group chat</string>
	<string name="muc_leave_question">Really leave %s?</string>
	<string name="account_settings_login">Login Information</string>
	<string name="account_settings_title">Account Settings</string>
	<string name="account_options_title">Connecting Options</string>
	<string name="account_options_advanced">Advanced Options</string>
	<string name="carbons_title">Message Carbons (XEP-0280)</string>
	<string name="carbons_summ">Request message copies from your other client(s)</string>
	<string name="account_jabberID_title">Jabber ID</string>
	<string name="account_jabberID_sum">example: me@jabber.example.com</string>
	<string name="account_jabberID_dialog_title">Enter your Jabber ID:</string>
	<string name="account_jabberPW_title">Account Password</string>
	<string name="account_jabberPW_sum">Your Jabber account password</string>
	<string name="account_jabberPW_change_on_server">Change password on server</string>
	<string name="account_jabberPW_password_old">Old Password:</string>
	<string name="account_jabberPW_password_new">New Password:</string>
	<string name="account_jabberPW_warning">WARNING! For successful login you must also set the same password on the server!</string>
	<string name="account_resource_title">Client Resource</string>
	<string name="account_resource_summ">Default: yaxim</string>
	<string name="account_resource_dialog_title">Enter your resource:</string>
	<string name="account_resource_hint">yaxim</string>
	<string name="account_prio_title">Client Priority</string>
	<string name="account_prio_summ">Default: 0 (allowed: -128 .. 127)</string>
	<string name="account_prio_dialog_title">Enter your priority:</string>
	<string name="account_port_title">Server Port</string>
	<string name="account_port_sum">Default: 5222</string>
	<string name="account_port_dialog_title">Enter the server port:</string>
	<string name="account_port_hint">5222</string>
	<string name="account_customserver_title">Custom Server</string>
	<string name="account_customserver_summ">(Optional) alternative server hostname</string>
	<string name="account_customserver_dialog_title">Enter server hostname:</string>
	<string name="account_customserver_hint">host.example.com</string>
	<string name="AboutDialog_title">About yaxim</string>
	<string name="AboutDialog_DevelopersTitle">Developers</string>
	<string name="AboutDialog_DevelopersText">Contact</string>
	<string name="AboutDialog_LicenceTitle">Licensing</string>
	<string name="AboutDialog_LicenceText">
		This program is free software; you can redistribute
		it and/or
		modify it under the terms of the GNU General Public License
		version 3
		as published by the Free Software Foundation.
		Link:
		http://www.gnu.org/licenses/gpl-3.0.html\n
		\n
		Parts of this software are
		provided under the MIT License:\n
		\n
		Copyright © 2009 Mads
		Kristiansen, Nullwire ApS\n
		\n
		Permission is hereby granted, free of
		charge, to any person obtaining
		a copy
		of this software and associated
		documentation files (the
		"Software"), to deal
		in the Software without
		restriction, including
		without limitation the rights
		to use, copy,
		modify, merge, publish,
		distribute, sublicense, and/or sell
		copies of
		the Software, and to
		permit persons to whom the Software is
		furnished to
		do so, subject to
		the following conditions:
		\n
		The above copyright notice
		and this permission notice shall be
		included in all
		copies or
		substantial portions of the Software.
		\n
		THE SOFTWARE IS PROVIDED "AS
		IS", WITHOUT WARRANTY OF ANY KIND,
		EXPRESS OR
		IMPLIED, INCLUDING BUT NOT
		LIMITED TO THE WARRANTIES OF
		MERCHANTABILITY,
		FITNESS FOR A PARTICULAR
		PURPOSE AND NONINFRINGEMENT.
		IN NO EVENT SHALL THE
		AUTHORS OR COPYRIGHT
		HOLDERS BE LIABLE FOR ANY
		CLAIM, DAMAGES OR OTHER
		LIABILITY, WHETHER IN
		AN ACTION OF CONTRACT,
		TORT OR OTHERWISE, ARISING FROM,
		OUT OF OR IN
		CONNECTION WITH THE
		SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
		SOFTWARE.
    </string>
	<string name="roster_contextmenu_send_image">Choose picture</string>
	<string name="roster_contextmenu_send_file">Send file</string>
</resources>