<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory android:title="@string/account_settings_title">
	<PreferenceScreen
		android:title="@string/Menu_AccSettings"
		android:summary="">

		<intent android:action="android.intent.action.MAIN"
			android:targetPackage="@string/application_id"
			android:targetClass="org.yaxim.androidclient.preferences.AccountPrefs" />
	</PreferenceScreen>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/preftitle_notify">
		<PreferenceScreen
			android:title="@string/preftitle_notify_msg"
			android:summary="">

			<intent android:action="android.intent.action.MAIN"
					android:targetPackage="@string/application_id"
					android:targetClass="org.yaxim.androidclient.preferences.NotificationPrefs" />
		</PreferenceScreen>
		<PreferenceScreen
			android:title="@string/preftitle_notify_muc"
			android:summary="">

			<intent android:action="android.intent.action.MAIN"
					android:data="muc"
					android:targetPackage="@string/application_id"
					android:targetClass="org.yaxim.androidclient.preferences.NotificationPrefs" />
		</PreferenceScreen>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/preftitle_general">
		<CheckBoxPreference
			android:id="@+id/dndInSilent"
			android:key="status_dndsilent"
			android:title="@string/pref_dnd_when_silent"
			android:summary="@string/pref_dnd_when_silent_summ"
			android:defaultValue="true"
		/>
		<CheckBoxPreference
			android:id="@+id/showOffline"
			android:key="showOffline"
			android:title="@string/showOffline_title"
			android:summary="@string/showOffline_summ"
			android:defaultValue="true"
		/>
		<CheckBoxPreference
			android:id="@+id/foregroundService"
			android:key="foregroundService"
			android:title="@string/foregroundService_title"
			android:summary="@string/foregroundService_summ"
			android:defaultValue="true"
		/>	
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/preftitle_app">
		<ListPreference android:title="@string/pref_theme"
		    android:entryValues="@array/pref_theme_values"
		    android:entries="@array/pref_theme_entries"
		    android:defaultValue="dark"
		    android:key="theme">
		</ListPreference>
		<ListPreference
			android:id="@+id/setSizeChat"
			android:key="setSizeChat"
			android:title="@string/FontChat_title"
			android:summary="@string/FontChat_summ"
			android:entries="@array/fontSizesChat"
			android:entryValues="@array/fontSizesChatCodes"
			android:dialogTitle="@string/FontChat_dialog"
		    android:defaultValue="18"
		/>
		<CheckBoxPreference
			android:id="@+id/enableGroups"
			android:key="enableGroups"
			android:title="@string/enableGroups_title"
			android:summary="@string/enableGroups_summ"
			android:defaultValue="true"
		/>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/preftitle_debug">
		<CheckBoxPreference
			android:id="@+id/smackdebug"
			android:key="smackdebug"
			android:title="@string/smackdebug_title"
			android:summary="@string/smackdebug_summ"
			android:defaultValue="false"
		/>
		
		<CheckBoxPreference
			android:id="@+id/reportcrash"
			android:key="reportcrash"
			android:title="@string/reportcrash_title"
			android:summary="@string/reportcrash_summ"
			android:defaultValue="false"
		/>	
	</PreferenceCategory>
	<!--<PreferenceCategory android:title="@string/preftitle_app">
		<ListPreference
			android:id="@+id/setSizeClist"
			android:key="setSizeClist"
			android:title="@string/FontRost_title"
			android:summary="@string/FontChat_summ"
			android:entries="@array/fontSizesClist"
			android:entryValues="@array/fontSizesClistCodes"
			android:dialogTitle="@string/FontChat_dialog"
		/>
	</PreferenceCategory>
--></PreferenceScreen>


