<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item   android:id="@+id/roster_contextmenu_contact_request_auth"
		android:title="@string/roster_contextmenu_contact_request_auth"
		android:icon="@drawable/ic_action_person_add"
		android:orderInCategory="4"
		/>

	<item   android:id="@+id/roster_contextmenu_contact_rename"
		android:title="@string/roster_contextmenu_contact_rename"
		android:orderInCategory="4"
		/>

	<item   android:id="@+id/roster_contextmenu_contact_change_group"
		android:title="@string/roster_contextmenu_contact_change_group"
		android:orderInCategory="4"
		/>

	<item   android:id="@+id/roster_contextmenu_ringtone"
			android:title="@string/roster_contextmenu_contact_ringtone"
			android:icon="@android:drawable/ic_menu_edit"
			android:orderInCategory="5"
		/>
	<item   android:id="@+id/roster_contextmenu_contact_share"
		android:title="@string/roster_contextmenu_contact_share"
		android:icon="@android:drawable/ic_menu_share"
		android:orderInCategory="9"
		/>

	<item   android:id="@+id/roster_contextmenu_contact_delete"
		android:title="@string/roster_contextmenu_contact_delete"
		android:orderInCategory="10"
		/>
</menu>
