<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto" >
	<item android:id="@+id/chat_optionsmenu_userlist"
		android:title="@string/Menu_userlist"
		android:icon="?attr/ic_action_group"
		app:showAsAction="ifRoom" />
	<item   android:id="@+id/roster_contextmenu_muc_edit"
		android:title="@string/roster_contextmenu_muc_edit"
		android:icon="@android:drawable/ic_menu_preferences"
		android:orderInCategory="4"
		/>
	<item   android:id="@+id/roster_contextmenu_muc_ringtone"
			android:title="@string/roster_contextmenu_contact_ringtone"
			android:icon="@android:drawable/ic_menu_edit"
			android:orderInCategory="5"
		/>
	<item   android:id="@+id/roster_contextmenu_muc_share"
		android:title="@string/roster_contextmenu_contact_share"
		android:icon="@android:drawable/ic_menu_share"
		android:orderInCategory="9"
		/>

	<item   android:id="@+id/roster_contextmenu_muc_leave"
		android:title="@string/roster_contextmenu_muc_leave"
		android:icon="@android:drawable/ic_menu_close_clear_cancel"
		android:orderInCategory="10"
		/>
</menu>
