<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<group android:id="@+id/roster_contextmenu_item_menu" android:orderInCategory="1">
		<item   android:id="@+id/roster_contextmenu_contact_mark_as_read"
			android:title="@string/roster_contextmenu_contact_mark_as_read"
			android:orderInCategory="2"
			/>
		<item   android:id="@+id/roster_contextmenu_contact_delmsg"
			android:title="@string/roster_contextmenu_contact_delmsg"
			android:orderInCategory="2"
			/>
		<item
			android:id="@+id/roster_contextmenu_send_image"
			android:icon="@android:drawable/ic_menu_camera"
			android:orderInCategory="10"
			android:showAsAction="ifRoom"
			android:title="@string/roster_contextmenu_send_image"
			android:visible="false"/>
		<item
			android:id="@+id/roster_contextmenu_send_file"
			android:icon="@android:drawable/ic_menu_upload"
			android:orderInCategory="11"
			android:title="@string/roster_contextmenu_send_file"
			android:visible="false"/>
	</group>
</menu>
