<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/StartupDialog_ScrollView" 
	android:layout_height="wrap_content" 
	android:layout_width="fill_parent" >
	<LinearLayout 
		android:orientation="vertical"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:paddingLeft="10dp"
		android:paddingStart="10dp"
		android:paddingRight="10dp"
		android:paddingEnd="10dp"
		android:paddingBottom="15dp"
		android:paddingTop="10dp" >

		<CheckBox
			android:id="@+id/password_change_on_server"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/account_jabberPW_change_on_server"
			style="?attr/dialogTextColor"
			/>

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:visibility="gone"
			android:text="@string/account_jabberPW_password_old"
			android:padding="2sp"
			style="?attr/dialogTextColor"
			/>
		<EditText
			android:id="@+id/password_old"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:visibility="gone"
			android:inputType="textPassword"
			android:padding="10sp"
			android:singleLine="true"
			/>

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/account_jabberPW_password_new"
			android:padding="2sp"
			style="?attr/dialogTextColor"
			/>
		<EditText
			android:id="@+id/password_new"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:padding="10sp"
			android:inputType="textPassword"
			android:singleLine="true"
			android:hint="@string/StartupDialog_pwHint"
			/>
		<CheckBox
			android:id="@+id/password_show"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/StartupDialog_pwshowHint"
			style="?attr/dialogTextColor"
			/>

		<TextView
		    android:id="@+id/password_warning"
		    style="?attr/dialogTextColor"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:padding="2sp"
		    android:text="@string/account_jabberPW_warning"
		    android:textColor="#b00"
		    android:textStyle="bold" />

	</LinearLayout>
</ScrollView>
