<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
		android:id="@+id/statusLayout" 
		android:orientation="vertical"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:paddingLeft="10dp"
		android:paddingStart="10dp"
		android:paddingRight="10dp"
		android:paddingEnd="10dp"
		android:paddingBottom="15dp"
		android:paddingTop="10dp" >
	
	
	<TextView
			android:id="@+id/StartupDialog_Summary"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:drawableLeft="@drawable/icon"
			android:drawableStart="@drawable/icon"
			android:text="@string/StartupDialog_Summary"
			android:drawablePadding="10sp"
			android:padding="10sp"
			style="?attr/dialogTextColor"
			android:focusable="true"
		/>
	<ScrollView android:id="@+id/StartupDialog_ScrollView" 
     				android:layout_height="wrap_content" 
     				android:layout_width="fill_parent" >
    <LinearLayout
		android:id="@+id/AddContact_ScrollLayout"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		>
	<TextView
			android:id="@+id/StartupDialog_Username_title"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/StartupDialog_Username_title"
			android:padding="2sp"
			style="?attr/dialogTextColor"
		/>
	<org.yaxim.androidclient.widget.AutoCompleteJidEdit
			android:id="@+id/StartupDialog_JID_EditTextField"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:padding="10sp"
			android:gravity="left"
			android:singleLine="true"
			android:imeOptions="actionNext"
			android:textSize="18sp"
			android:maxWidth="200sp"
			android:inputType="textEmailAddress"
			android:hint="@string/Global_JID_hint"
			android:contentDescription="@string/StartupDialog_Username_title"/>
	<TextView
			android:id="@+id/StartupDialog_passwd_title"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/StartupDialog_passwd_title"
			android:padding="2sp"
			style="?attr/dialogTextColor"
		/>
	<EditText
			android:id="@+id/StartupDialog_PASSWD_EditTextField"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:password="true"
			android:padding="10sp"
			android:gravity="left"
			android:singleLine="true"
			android:textSize="18sp"
			android:maxWidth="200sp"
			android:hint="@string/StartupDialog_pwHint"
			android:contentDescription="@string/StartupDialog_passwd_title"
			/>
	<CheckBox
			android:id="@+id/create_account"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/StartupDialog_create_new"
			style="?attr/dialogTextColor"
		/>

	</LinearLayout>
	</ScrollView>
</LinearLayout>
