<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent" 
	android:layout_width="fill_parent" >
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:drawableLeft="@drawable/icon"
			android:drawablePadding="10sp"
			android:text="@string/AboutDialog_DevelopersTitle"
			android:textSize="20sp"
			android:padding="10sp"
			android:focusable="true"
			/>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:autoLink="web"
			android:text="@string/AboutDialog_DevelopersText"
			android:padding="2sp"
			android:focusable="true"
			/>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:drawableLeft="@drawable/gnuicon"
			android:drawablePadding="15sp"
			android:text="@string/AboutDialog_LicenceTitle"
			android:textSize="20sp"
			android:padding="10sp"
			android:focusable="true"
			/>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:autoLink="web"
			android:text="@string/AboutDialog_LicenceText"
			android:padding="2sp"
			android:focusable="true"
			/>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/AboutDialog_greetings"
			android:padding="2sp"
			android:focusable="true"
			/>
	</LinearLayout>

</ScrollView>	
